cmake_minimum_required(VERSION 3.20)
project(nbtree C)

set(CMAKE_C_STANDARD 99)
include(GNUInstallDirs)
add_subdirectory(btree)
link_directories("/usr/local/lib")
add_definitions("-g")
include_directories("/usr/local/include")
add_executable(nbtree main.c)
target_link_libraries(nbtree PUBLIC btree cslice)